Fix homepage anchor overlap issue in Safari

--- a/src/scss/components/_section-anchor.scss
+++ b/src/scss/components/_section-anchor.scss
@@ -4,7 +4,8 @@
     @include media-query('md') {
         position: sticky;
         top: 1rem;
-        display: inline-block;
+        display: block;
+        width: min-content;
         color: var(--color-secondary);
         text-transform: uppercase;
         text-decoration: none;
